[package]
edition = "2024"
name = "crustpoint"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "crustpoint"
path = "./src/main.rs"

[dependencies]
# Need a prerelease version of esp-hal to get access to GPIO pins 12-17. Other esp crates need to follow that version. Update to stable after 1.0.0 when those GPIO pins are stable.
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp-alloc", "esp-radio", "esp32c3"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-alloc = { version = "0.9.0", features = ["defmt"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32c3", "panic-handler"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c3"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }
esp-radio = { version = "0.17.0", features = ["ble", "coex", "defmt", "esp-alloc", "esp32c3", "smoltcp", "unstable", "wifi"], git = "https://github.com/esp-rs/esp-hal.git", rev = "109324ac4c5f8d0788b01ce7a27ac3045570f696" }


defmt = "1.0.1"

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"
embedded-hal = "1.0.0"
thiserror = { version = "2.0.18", default-features = false }
# For SD card
embedded-sdmmc = { version = "0.9.0", features = ["defmt-log"], default-features = false }
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
